started integrating code for active status dot

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -84,6 +84,10 @@ body {
   width: 20px;
 }
 
+/* #voice-chat-active-dot {
+
+} */
+
 #controlContainer {
   background-color: #EBEBEB;
   width: 175px;
