--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -272,43 +272,43 @@ body {
   border-color: var(--button-hover-border);
 }
 
-.radio-buttons .onoffswitch {
+.onoffswitch {
   margin-right:5px;
   margin-left:5px;
   margin-bottom:10px;
   position: relative; width: 64px;
   -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
-.radio-buttons .onoffswitch-checkbox {
+.onoffswitch-checkbox {
   position: absolute;
   opacity: 0;
   pointer-events: none;
 }
-.radio-buttons .onoffswitch-label {
+.onoffswitch-label {
   display: block; overflow: hidden; cursor: pointer;
   border: 2px solid #FFFFFF; border-radius: 0px;
 }
-.radio-buttons .onoffswitch-inner {
+.onoffswitch-inner {
   display: block; width: 200%; margin-left: -100%;
   transition: margin 0.2s ease-in 0s;
 }
-.radio-buttons .onoffswitch-inner:before, .onoffswitch-inner:after {
+.onoffswitch-inner:before, .onoffswitch-inner:after {
   display: block; float: left; width: 50%; height: 22px; padding: 0; line-height: 22px;
   font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
   box-sizing: border-box;
 }
-.radio-buttons .onoffswitch-inner:before {
+.onoffswitch-inner:before {
   content: "ON";
   padding-left: 10px;
   background-color: #EEEEEE; color: #444;
 }
-.radio-buttons .onoffswitch-inner:after {
+.onoffswitch-inner:after {
   content: "OFF";
   padding-right: 10px;
   background-color: #EEEEEE; color: #999999;
   text-align: right;
 }
-.radio-buttons .onoffswitch-switch {
+.onoffswitch-switch {
   display: block; width: 16px; margin: 3px;
   background: #A1A1A1;
   position: absolute; top: 0; bottom: 0;
@@ -316,10 +316,10 @@ body {
   border: 2px solid #FFFFFF; border-radius: 0px;
   transition: all 0.2s ease-in 0s; 
 }
-.radio-buttons .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
   margin-left: 0;
 }
-.radio-buttons .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
   right: 0px; 
   background-color: #FFBF86; 
 }
