--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -309,7 +309,7 @@ body {
   text-align: right;
 }
 .onoffswitch-switch {
-  display: block; width: 16px; margin: 3px;
+  display: block; width: 20px; height: 20px; margin: 3px;
   background: #A1A1A1;
   position: absolute; top: 0; bottom: 0;
   right: 38px;
