lightened mute button font color when disabled

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -189,6 +189,14 @@ body {
   text-align: center;
 }
 
+.radio-buttons .inline-toggle-container #mute:disabled {
+  width: 60px;
+  height: 26px;
+  margin-right: 5px;
+  text-align: center;
+  text-decoration-color: #A1A1A1;
+}
+
 #slider-container {
   position: relative;
   left: 15px;
