routed voiceChatSwitch functions

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -195,7 +195,7 @@ body {
   height: 26px;
   margin-right: 5px;
   text-align: center;
-  color: #A1A1A1;
+  color: lightgray;
 }
 
 #slider-container {
