fix: adds default font and font-size to Code Mirror

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -33,6 +33,11 @@ body {
 	overflow-x: hidden;
 }
 
+.CodeMirror {
+  font-family: Arial;
+  font-size: 16px;
+}
+
 /* Height / width / positioning can be customized for your use case.
    For demo purposes, we make the user list 175px and firepad fill the rest of the page. */
 #userlist {
