--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -9,15 +9,6 @@
   --arrow-color: #FFFFFF;
 }
 
-/* html {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  height: 100%;
-} */
-
 html {
 	height: 100%;
 	width: 100%;
@@ -27,7 +18,7 @@ html {
 
 body {
 	margin: 0;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	overflow-y: hidden;
 	overflow-x: hidden;
