--- a/WebGazer/simple-wg/css/style.css
+++ b/WebGazer/simple-wg/css/style.css
@@ -1,107 +1,129 @@
 body {
-    min-width:600px!important;
+  min-width: 600px !important;
 }
 
 /* Video Feed Styling */
 #overlay {
-    z-index: 1;
+  z-index: 1;
 }
 
 /* Navbar styling */
 #webgazerNavbar {
-    left: 320px;
-    z-index: 0;
-    box-shadow: 0px 3px 5px #ddd;
-    border:0px;
-    background-color: #fff;
+  left: 320px;
+  z-index: 0;
+  box-shadow: 0px 3px 5px #ddd;
+  border: 0px;
+  background-color: #fff;
 }
 
-#Accuracy a{
-    background-color: #222;
-    color: #eee;
-    left: -15px;
-    padding-left: 80px;
-    padding-right: 40px;
+#Accuracy a {
+  background-color: #222;
+  color: #eee;
+  left: -15px;
+  padding-left: 80px;
+  padding-right: 40px;
 }
 #Accuracy {
-    background-color: #222;
-    padding-left: inherit;
+  background-color: #222;
+  padding-left: inherit;
 }
 
 li {
-    padding-left: 50px;
+  padding-left: 50px;
 }
 .navbar-right li {
-    padding-right: 20px;
+  padding-right: 20px;
 }
 
 .helpBtn {
-    padding: 15px;
-    border: none;
-    background: none;
-    color: #777;
+  padding: 15px;
+  border: none;
+  background: none;
+  color: #777;
 }
 .helpBtn a {
-    background: none;
-    color: #777;
+  background: none;
+  color: #777;
 }
 .helpBtn a:hover {
-    color: black!important;
-    text-decoration: none;
+  color: black !important;
+  text-decoration: none;
 }
 .modal-header {
-    border-bottom: none!important;
+  border-bottom: none !important;
 }
 
 /* Calibration button styling */
-.Calibration{
-    width: 20px;
-    height: 20px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    background-color: red;
-    opacity: 0.2;
-    border-color: black;
-    border-style: solid;
-    position:fixed;
+.Calibration {
+  width: 20px;
+  height: 20px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+  background-color: red;
+  opacity: 0.2;
+  border-color: black;
+  border-style: solid;
+  position: fixed;
 }
 
 /* Calibration point position */
-#Pt1{
-    top: 70px;
-    left:340px;
+#Pt1 {
+  top: 70px;
+  left: 340px;
 }
-#Pt2{
-    top: 70px;
-    left:50vw;
-    margin-left: 340;
+#Pt2 {
+  top: 70px;
+  left: 50vw;
+  margin-left: 340;
 }
-#Pt3{
-    top: 70px;
-    right:2vw;
+#Pt3 {
+  top: 70px;
+  right: 2vw;
 }
-#Pt4{
-    top:50vh;
-    left:2vw;
+#Pt4 {
+  top: 50vh;
+  left: 2vw;
 }
-#Pt5{
-    top: 50vh;
-    left: 50vw;
+#Pt5 {
+  top: 50vh;
+  left: 50vw;
 }
-#Pt6{
-    top: 50vh;
-    right:2vw;
+#Pt6 {
+  top: 50vh;
+  right: 2vw;
 }
-#Pt7{
-    bottom:2vw;
-    left: 2vw;
+#Pt7 {
+  bottom: 2vw;
+  left: 2vw;
 }
-#Pt8{
-    bottom:2vw;
-    left:50vw;
+#Pt8 {
+  bottom: 2vw;
+  left: 50vw;
 }
-#Pt9{
-    bottom:2vw;
-    right:2vw;
+#Pt9 {
+  bottom: 2vw;
+  right: 2vw;
+}
+
+#button-container {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+
+#button-container > button {
+  /* background-color: #008cba; */
+  padding: 15px;
+  margin: 10px;
+  z-index: 4;
+}
+
+.button {
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: #4caf50;
+  color: white;
 }
