added scrollbar to UI options on the document page

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -1,43 +1,43 @@
 /* global style */
 :root {
-  --outer-border: #BBB;
-  --sub-box-padding: #FCFCFC;
+  --outer-border: #bbb;
+  --sub-box-padding: #fcfcfc;
   --title-text: #444;
   --button-border: #999999;
-  --button-hover: #FFBF86;
-  --button-hover-border: #E6A165;
-  --button-text: #FFFFFF;
-  --arrow-color: #FFFFFF;
+  --button-hover: #ffbf86;
+  --button-hover-border: #e6a165;
+  --button-text: #ffffff;
+  --arrow-color: #ffffff;
 }
 
 html {
-	height: 100%;
-	width: 100%;
-	overflow-x: auto;
-	overflow-y: hidden;
+  height: 100%;
+  width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 body {
-	margin: 0;
-	height: 100vh;
-	width: 100%;
-	overflow-y: hidden;
-	overflow-x: hidden;
+  margin: 0;
+  height: 100vh;
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 /* Firepad/CodeMirror Style */
 #firepad {
-	position: absolute;
-	top: 0;
-	left: 200px;
-	right: 100px;
-	height: 100vh;
-	min-width: 916px;
-	overflow: hidden;
-	border-style: solid;
-	border-width: 1px;
-	border-color: lightgray;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  top: 0;
+  left: 200px;
+  right: 100px;
+  height: 100vh;
+  min-width: 916px;
+  overflow: hidden;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgray;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .CodeMirror {
@@ -45,42 +45,42 @@ body {
 }
 
 a.powered-by-firepad {
-	display: none;
+  display: none;
 }
 
 div.firepad-richtext.firepad-with-toolbar {
-	height: 100%;
+  height: 100%;
 }
 
 div.CodeMirror-vscrollbar {
-	width: 16px;
+  width: 16px;
 }
 
 div.firepad-toolbar {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 div.firepad-toolbar-wrapper {
-	margin: 0 auto;
-	min-width: 816px;
-	width: 816px;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	padding: 0px 20px;
+  margin: 0 auto;
+  min-width: 816px;
+  width: 816px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0px 20px;
 }
 
 div.CodeMirror-lines {
-	margin: 0 auto;
-	width: 816px;
-	min-height: 1000px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	padding: 20px;
+  margin: 0 auto;
+  width: 816px;
+  min-height: 1000px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 20px;
 }
 
 div.CodeMirror.cm-s-default.CodeMirror-wrap {
-	min-width: 816px;
+  min-width: 816px;
 }
 
 /* User List Style */
@@ -143,11 +143,14 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 
 /* Control Container Style */
 #controlContainer {
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
   width: 175px;
   position: relative;
   border-radius: 4px;
   padding-bottom: 12px;
+  height: auto;
+  max-height: 65vh;
+  overflow-y: scroll;
 }
 
 #user-checkboxes-container {
@@ -243,7 +246,7 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   color: var(--button-text);
   border: 1px solid var(--button-border);
   border-radius: 6px;
-  background-color: #C9C9C9;
+  background-color: #c9c9c9;
   border-bottom-width: 4px;
   padding: 4px 6px 2px 6px;
   margin-left: 5px;
@@ -254,7 +257,7 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   border-color: var(--button-hover-border);
 }
 
-.radio-buttons input[type="radio"]:checked+label {
+.radio-buttons input[type="radio"]:checked + label {
   background-color: var(--button-border);
   border-color: var(--title-text);
 }
@@ -325,8 +328,8 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   margin-top: 10px;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  input[type='range'] {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  input[type="range"] {
     display: inline;
     overflow: hidden;
     border: 1px solid var(--title-text);
@@ -336,20 +339,20 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
     border-radius: 13px;
   }
 
-  input[type='range']::-webkit-slider-runnable-track {
+  input[type="range"]::-webkit-slider-runnable-track {
     height: 13px;
     -webkit-appearance: none;
     color: var(--button-hover-border);
   }
 
-  input[type='range']::-webkit-slider-thumb {
+  input[type="range"]::-webkit-slider-thumb {
     border-radius: 13px;
     width: 13px;
     -webkit-appearance: none;
     height: 13px;
     cursor: ew-resize;
     background: var(--button-hover-border);
-    box-shadow: -80px 0 0 75px #C9C9C9;
+    box-shadow: -80px 0 0 75px #c9c9c9;
   }
 }
 
@@ -371,7 +374,7 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   position: relative;
   top: 2px;
   width: 145px;
-  margin-top:8px;
+  margin-top: 8px;
 }
 
 #calibrationButton:hover {
@@ -382,8 +385,11 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 
 /* On/Off Switch Style */
 .onoffswitch {
-  position: relative; width: 64px;
-  -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+  position: relative;
+  width: 64px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 .onoffswitch-checkbox {
   position: absolute;
@@ -391,42 +397,64 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   pointer-events: none;
 }
 .onoffswitch-label {
-  display: block; overflow: hidden; cursor: pointer;
-  border: 2px solid #FFFFFF; border-radius: 0px;
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid #ffffff;
+  border-radius: 0px;
   margin-bottom: 0;
 }
 .onoffswitch-inner {
-  display: block; width: 200%; margin-left: -100%;
+  display: block;
+  width: 200%;
+  margin-left: -100%;
   transition: margin 0.2s ease-in 0s;
 }
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-  display: block; float: left; width: 50%; height: 22px; padding: 0; line-height: 22px;
-  font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+.onoffswitch-inner:before,
+.onoffswitch-inner:after {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 22px;
+  padding: 0;
+  line-height: 22px;
+  font-size: 14px;
+  color: white;
+  font-family: Trebuchet, Arial, sans-serif;
+  font-weight: bold;
   box-sizing: border-box;
 }
 .onoffswitch-inner:before {
   content: "ON";
   padding-left: 10px;
-  background-color: #EEEEEE; color: #444;
+  background-color: #eeeeee;
+  color: #444;
 }
 .onoffswitch-inner:after {
   content: "OFF";
   padding-right: 10px;
-  background-color: #EEEEEE; color: #999999;
+  background-color: #eeeeee;
+  color: #999999;
   text-align: right;
 }
 .onoffswitch-switch {
-  display: block; width: 20px; height: 20px; margin: 3px;
-  background: #A1A1A1;
-  position: absolute; top: 0; bottom: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 3px;
+  background: #a1a1a1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
   right: 38px;
-  border: 2px solid #FFFFFF; border-radius: 0px;
-  transition: all 0.2s ease-in 0s; 
+  border: 2px solid #ffffff;
+  border-radius: 0px;
+  transition: all 0.2s ease-in 0s;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
   margin-left: 0;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-  right: 0px; 
-  background-color: #FFBF86; 
+  right: 0px;
+  background-color: #ffbf86;
 }
