Added gradient control, fixed mouse send bug

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -318,7 +318,25 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   margin-bottom: 0px;
 }
 
+.slider-text2 {
+  position: relative;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  margin-left: 10px;
+  margin-top: 5px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
 #sentenceSlider {
+  position: relative;
+  width: 125px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+#sentenceSlider2 {
   position: relative;
   width: 125px;
   margin-left: 10px;
