--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -280,21 +280,24 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 }
 
 /* Mute Button Style */
-.radio-buttons .inline-toggle-container #mute {
+.radio-buttons .inline-toggle-container #aud, #cam {
   width: 60px;
   height: 26px;
   margin: auto 0;
   text-align: center;
   color: black;
   font-size: 14px;
+  margin-bottom: 5px;
+
 }
 
-.radio-buttons .inline-toggle-container #mute:disabled {
+.radio-buttons .inline-toggle-container #aud:disabled, #cam:disabled {
   width: 60px;
   height: 26px;
   margin: auto 0;
   text-align: center;
   color: lightgray;
+  margin-bottom: 5px;
 }
 
 #slider-container {
@@ -476,4 +479,8 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
   right: 0px;
   background-color: #ffbf86;
+}
+.vvSwitch{
+  left: 32px;
+  margin-bottom: 5px;
 }
