--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -30,9 +30,9 @@ body {
   position: absolute;
   top: 0;
   left: 200px;
-  right: 100px;
+  right: 14%;
   height: 100vh;
-  min-width: 916px;
+  /* min-width: 916px; */
   overflow: hidden;
   border-style: solid;
   border-width: 1px;
@@ -483,4 +483,15 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 .vvSwitch{
   left: 32px;
   margin-bottom: 5px;
+}
+
+
+/* Control Container Style */
+#video-streams {
+  /* background-color: lightblue; */
+  width: 200px;
+  position: absolute;
+  height: 100%;
+  overflow: scroll;
+  right: 0px;
 }
