--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -497,10 +497,7 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 }
 
 #heatmap {
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100%;
+  width: 100%;
   pointer-events: none;
-  position: absolute;
-  min-height: 100vh;
-  min-width: 100vw;
 }
