vis style ui now only shows parm options for selected style

--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -302,7 +302,7 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   margin-bottom: 5px;
 }
 
-#slider-container {
+.slider-container {
   position: relative;
   left: 15px;
   width: 145px;
