--- a/css/eyewrite.css
+++ b/css/eyewrite.css
@@ -98,6 +98,14 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
   border-radius: 4px;
 }
 
+.userlist-box > * {
+  z-index: 2;
+}
+
+div.firepad-toolbar-wrapper {
+  z-index: 2;
+}
+
 /* Arrow Style (styles relative position arrows in User List) */
 .arrow-up {
   width: 0;
@@ -155,18 +163,18 @@ div.CodeMirror.cm-s-default.CodeMirror-wrap {
 }
 
 /* For heatmap layering */
-/* #controlContainer > * {
+#controlContainer > * {
   z-index: 1;
 }
 
 #controlContainer > * > * {
   z-index: 1;
-} */
+}
 
 #user-checkboxes-container {
   position: relative;
   margin-left: 15px;
-  /* z-index: 3; */
+  z-index: 3;
 }
 
 .user-checkboxes {
